--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1671,5 +1671,8 @@ restoreNavStates();
     window.isGuest = BaseApp.isGuest;
 </script>
 
+<!-- Welcome Modal Container - At body level for absolute fixed positioning -->
+<div id="welcomeModalContainer"></div>
+
 {% block scripts %}{% endblock %}</body>
 </html>
