--- a/app/templates/optimize_video/index.html
+++ b/app/templates/optimize_video/index.html
@@ -66,7 +66,7 @@
                             </div>
                             <p class="url-input-hint">
                                 <i class="ph ph-info"></i>
-                                Use this to optimize unlisted or hidden videos from your channel
+                                Works with any public video or your unlisted/private videos
                             </p>
                         </div>
                     </div>
@@ -74,9 +74,9 @@
                         <!-- Videos will be populated here -->
                     </div>
                     <div id="emptyVideos" class="empty-state" style="display: none;">
-                        <i class="ph ph-video"></i>
-                        <p>Connect your YouTube channel to see your videos</p>
-                        <span>Go to Social Accounts to connect</span>
+                        <i class="ph ph-youtube-logo"></i>
+                        <p>No YouTube Channel Connected</p>
+                        <span>Connect your YouTube account in Social Accounts or use the URL option above to optimize any video</span>
                     </div>
                 </div>
 
